# Utility

./: .travis.yml  README.md  Utility.sln
Projects/CMake/: CMakeLists.txt
Projects/CMake/Test/: CMakeLists.txt
Projects/CMake/Utility/: CMakeLists.txt
Projects/MSVC/2015/: .leu  Utility.sln
Projects/MSVC/2015/GoogleTest/: gtest.vcxproj  gtest.vcxproj.filters
Projects/MSVC/2015/IntegralList/: IntegralList.vcxproj
Projects/MSVC/2015/Test/: Test.vcxproj  Test.vcxproj.filters  for-each-order-test.cpp  integer-sequence-test.cpp  tuple-test.cpp
Projects/MSVC/2015/Tuple/: Tuple.vcxproj
Projects/MSVC/2015/Utility/: Utility.vcxproj  Utility.vcxproj.filters
Projects/MSVC/2015/Utility/Scripts/: install.sh
Test/Source/: for-each-order-test.cpp  integer-sequence-test.cpp  tuple-test.cpp
Utility/: String.cpp  String.h  Test.cpp  Types.h  Utility.h  Utility.vcxproj  Utility.vcxproj.filters
Utility/Include/: constexpr.inl  for-each.inl  integer-sequence.inl  tuple.inl
